feat(proofs): implement unambiguous granular deletion proof system and bundle management